--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
     },
     {
       "path": "./apps/101-display-recipes-solution"
+    },
+    {
+      "path": "./apps/102-filter-recipes-solution"
+    },
+    {
+      "path": "./apps/102-filter-recipes-starter"
     }
   ]
 }
