--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enquirer": "2.4.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-lit": "2.1.1",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "22.2.0",
