refactor: 🛠️ add 403-cancel-request

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,12 @@
     },
     {
       "path": "./apps/402-handle-errors-starter"
+    },
+    {
+      "path": "./apps/403-cancel-request-solution"
+    },
+    {
+      "path": "./apps/403-cancel-request-starter"
     }
   ]
 }
