--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": true,
   "dependencies": {
     "@lit/task": "1.0.3",
-    "lit": "3.3.1"
+    "lit": "3.3.1",
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
