--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@lit-labs/signals": "0.1.3",
     "@lit/task": "1.0.3",
     "lit": "3.3.1",
     "rxjs": "7.8.2"
