build: 📦 add analyze target

--- a/apps/404-task-solution/project.json
+++ b/apps/404-task-solution/project.json
@@ -5,5 +5,12 @@
   "sourceRoot": "apps/404-task-solution/src",
   "tags": [],
   "// targets": "to see all targets run: nx show project display-recipes-starter --web",
-  "targets": {}
+  "targets": {
+    "analyze": {
+      "command": "lit-analyzer src",
+      "options": {
+        "cwd": "{projectRoot}"
+      }
+    }
+  }
 }
