build: 📦 fix last typing issues

--- a/apps/101-display-recipes-starter/tsconfig.app.json
+++ b/apps/101-display-recipes-starter/tsconfig.app.json
@@ -8,6 +8,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
+    "noUnusedLocals": false,
     "experimentalDecorators": true,
     "useDefineForClassFields": false
   },
