--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "target": "esnext",
     "types": ["node"],
-    "importHelpers": false
+    "importHelpers": false,
+    "allowImportingTsExtensions": true
   },
   "include": ["**/*.ts"]
 }
