--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,8 +6,8 @@
     "importHelpers": true,
     "isolatedModules": true,
     "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
@@ -16,6 +16,9 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["@lit-workshop/source"]
+    "customConditions": ["@lit-workshop/source"],
+    "paths": {
+      "@kitchen/*": ["./packages/kitchen/src/*"]
+    }
   }
 }
